// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic Example 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 0;
  margin-bottom: 0;
}

<ul
  className="c0"
/>
`;

exports[`Disabled items 1`] = `
.c1 {
  position: relative;
  display: block;
  padding: .75rem 1.25rem;
  margin-bottom: -1px;
  background-color: #fff;
  border: 1px solid rgba(0,0,0,0.125);
  color: #6c757d;
  background-color: #fff;
}

.c1:first-child {
  border-top-right-radius: .25rem;
  border-top-left-radius: .25rem;
}

.c1:last-child {
  margin-bottom: 0;
  border-bottom-right-radius: .25rem;
  border-bottom-left-radius: .25rem;
}

.c1:focus,
.c1:hover {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 .c0 {
  border-right: 0;
  border-left: 0;
  border-radius: 0;
}

.c2:first-child .c0:first-child {
  border-top: 0;
}

.c2 .c0:last-child {
  border-bottom: 0 !important;
}

<li
  className="c0 c1"
  disabled={true}
/>
`;

exports[`Flush List group 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-left: 0;
  margin-bottom: 0;
}

.c0 .c1 {
  border-right: 0;
  border-left: 0;
  border-radius: 0;
}

.c0:first-child .c1:first-child {
  border-top: 0;
}

.c0 .c1:last-child {
  border-bottom: 0 !important;
}

<ul
  className="c0"
/>
`;

exports[`Links 1`] = `
.c0 {
  width: 100%;
  color: #495057;
  text-align: inherit;
}

.c0:active {
  color: #212529;
  background-color: #e9ecef;
}

.c0:focus,
.c0:hover {
  color: #495057;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f8f9fa;
}

<a
  className="c0"
  href="#"
/>
`;

exports[`ListGroupButton active 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: .75rem 1.25rem;
  margin-bottom: -1px;
  background-color: #fff;
  border: 1px solid rgba(0,0,0,0.125);
  z-index: 2;
  color: #fff;
  background-color: #007bff;
  border-color: #007bff;
  width: 100%;
  color: #495057;
  text-align: inherit;
  color: #fff!important;
  background-color: #007bff!important;
}

.c0:first-child {
  border-top-right-radius: .25rem;
  border-top-left-radius: .25rem;
}

.c0:last-child {
  margin-bottom: 0;
  border-bottom-right-radius: .25rem;
  border-bottom-left-radius: .25rem;
}

.c0:focus,
.c0:hover {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active {
  color: #212529;
  background-color: #e9ecef;
}

.c0:focus,
.c0:hover {
  color: #495057;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f8f9fa;
}

<li
  className="c0"
/>
`;

exports[`ListGroupButton color 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: .75rem 1.25rem;
  margin-bottom: -1px;
  background-color: #fff;
  border: 1px solid rgba(0,0,0,0.125);
  color: #08488c;
  background-color: #b7daff;
  width: 100%;
  color: #495057;
  text-align: inherit;
}

.c0:first-child {
  border-top-right-radius: .25rem;
  border-top-left-radius: .25rem;
}

.c0:last-child {
  margin-bottom: 0;
  border-bottom-right-radius: .25rem;
  border-bottom-left-radius: .25rem;
}

.c0:focus,
.c0:hover {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active {
  color: #212529;
  background-color: #e9ecef;
}

.c0:focus,
.c0:hover {
  color: #495057;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f8f9fa;
}

.c0:focus,
.c0:hover {
  color: #08488c;
  background-color: #9ecdff;
}

.c0.active {
  color: #fff;
  background-color: #08488c;
  border-color: #08488c;
}

<li
  className="c0"
  color="primary"
/>
`;

exports[`ListGroupButton disabled 1`] = `
.c0 {
  position: relative;
  display: block;
  padding: .75rem 1.25rem;
  margin-bottom: -1px;
  background-color: #fff;
  border: 1px solid rgba(0,0,0,0.125);
  color: #6c757d;
  background-color: #fff;
  width: 100%;
  color: #495057;
  text-align: inherit;
  color: #6c757d;
  background-color: #fff;
}

.c0:first-child {
  border-top-right-radius: .25rem;
  border-top-left-radius: .25rem;
}

.c0:last-child {
  margin-bottom: 0;
  border-bottom-right-radius: .25rem;
  border-bottom-left-radius: .25rem;
}

.c0:focus,
.c0:hover {
  z-index: 1;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active {
  color: #212529;
  background-color: #e9ecef;
}

.c0:focus,
.c0:hover {
  color: #495057;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f8f9fa;
}

<li
  className="c0"
  disabled={true}
/>
`;
